reference-grant.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-gateway-to-nginx-service
  namespace: ingress-test
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: test-gateway
  - group: gateway.networking.k8s.io
    kind: GRPCRoute
    namespace: test-gateway
  to:
  - group: ""
    kind: Service
    name: nginx-sv
