deploy-affinity.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: deploy-affinity
  name: deploy-affinity
spec:
  replicas: 1
  selector:
    matchLabels:
      env: dev
  template:
    metadata:
      labels:
        env: dev
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: env
                operator: In
                values:
                - dev
      containers:
      - image: nginx
        name: nginx
