nginx4.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: engineering
---
apiVersion: v1
kind: Pod
metadata:
  namespace: engineering
  labels:
    env: test
  name: nginx4
spec:
  containers:
  - image: nginx
    name: nginx4
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
