pod-node-selectory.yml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: pod
  name: pod
spec:
  nodeSelector:
    disk: ssd
  containers:
  - image: nginx
    name: pod
