pod-secret.yml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: pod
  name: pod
spec:
  containers:
  - image: busybox
    name: pod
    command: ["sleep", "infinity"]
    resources: {}
  restartPolicy: Always
status: {}
