pod-secure.yml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: pod-secure
  name: pod-secure
spec:
  securityContext:
    runAsUser: 1000
    runAsGroup: 3000
    fsGroup: 2000
  containers:
  - image: busybox
    name: pod
    command: ["sleep", "1200"]
