httpredirect-flask-demo-app.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tls-redirect
  namespace: flask-demo-app
spec:
  parentRefs:
  - name: example-gateway
    sectionName: http
  hostnames:
  - adrilab.xyz
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        port: 443
