httproute-flask-demo-app.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute
  namespace: flask-demo-app
spec:
  parentRefs:
  - name: gateway-flask
  hostnames:
  - "adrilab.xyz"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: flask-demo-app
      namespace: flask-demo-app
      port: 80
