httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: adrilab-route
  namespace: test-api-gateway
spec:
  parentRefs:
  - name: adrilab-gateway
  hostnames:
  - "api.adrilab.xyz"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /testpath
    backendRefs:
    - name: deploy-test-nginx
      port: 80
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: deploy-test-nginx
      port: 80
