ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - "adrilab.xyz"
    secretName: adrilab-tls
  rules:
  - host: adrilab.xyz
    http:
      paths:
      - path: /testpath
        pathType: Prefix
        backend:
          service:
            name: deploy-test-nginx 
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: deploy-test-nginx 
            port:
              number: 80
