ingresshttp.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: "adrilab.xyz"
    http:
      paths:
      - path: /testpath
        pathType: Prefix
        backend:
          service:
            name: deploy-test-nginx 
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: deploy-test-nginx 
            port:
              number: 80
