updated-minimal-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  namespace: ingress-test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"  # Allow both HTTP and HTTPS
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - adrilab.xyz
    secretName: adrilab-tls-secret
  rules:
  - host: adrilab.xyz
    http:
      paths:
      - backend:
          service:
            name: nginx-sv
            port:
              number: 80
        path: /testpath
        pathType: Prefix
