networkpolicy2.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-outgoing
  namespace: secure
spec:
  podSelector: {}  # apply to all pods in the namespace
  policyTypes:
  - Egress
  egress: []       # deny all egress
